# tikatape

./: Cargo.toml  LICENSE
jar/: tika-config-without-ocr.xml  tika-config.xml
src/: lib.rs  local.rs  remote.rs
