[package]
name = "tikatape"
version = "0.1.0"
edition = "2021"
description = "Wrapper for Apache Tika text extraction and OCR. Provides the ability to either call an external server, or start up and use a local one."
license-file = "LICENSE"
authors = ["Xymist <james@jamieduerden.me>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
mime = "0.3.16"
reqwest = { version = "0.11.13", default-features = false, features = [
  "rustls-tls",
] }
serde = "1.0.147"
serde_json = "1.0.89"
tempdir = "0.3.7"
tokio = { version = "1.22.0", features = ["full"] }
tracing = "0.1.37"
